# pngdefry-py

./: .gitignore  .gitmodules  LICENSE  README.md  pyproject.toml
src/: __init__.py  pngdefry_py.py  test.py
src/pngdefry/: __init__.py  pngdefry_py.py
src/pngdefrypy/: pngdefry_py.py
tests/: test.py
