[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
exclude = [
  "libs/*",
]

[tool.hatch.build.targets.wheel]
artifacts = [
  "libpngdefry.so",
  "pngdefry.dll",
  "libpngdefry.dylib",
]

[project]
name = "pngdefrypy"
version = "1.0.0"
authors = [
  { name="greywolfcode" }
]
description = "Python wrapper for pngdefry CgBI to PNG converter"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
]
license = "MIT"
license-files = ["LICENSE"]

[project.urls]
Homepage = "https://github.com/greywolfcode/pngdefrypy"
Issues = "https://github.com/greywolfcode/pngdefrypy/issues"